documentation for learner, conv and datasets + datasets convenience functions

--- a/nbs/02_conv.ipynb
+++ b/nbs/02_conv.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "de354d5c-eabd-4518-8a64-f985564dc020",
+   "metadata": {},
+   "source": [
+    "# Conv\n",
+    "\n",
+    "Module for building convolutional neural networks. Includes component classes and flexible network classes for building a range of convolutional networks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fb744105-3123-45d4-9501-0f7d6676d678",
@@ -18,7 +28,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from torch import nn"
+    "from torch import nn\n",
+    "from fastcore import docments"
    ]
   },
   {
@@ -49,14 +60,19 @@
    "source": [
     "#| export\n",
     "class ConvNormAct(nn.Sequential):\n",
+    "    \"\"\"\n",
+    "        Sequential block containing a convolutional layer, followed by batch \n",
+    "        normalisation and a ReLU activation. It is the basic component of\n",
+    "        convolutional neural networks.\n",
+    "    \"\"\"\n",
     "    def __init__(\n",
     "        self,\n",
-    "        in_channels,\n",
-    "        out_channels,\n",
-    "        kernel_size=3,\n",
-    "        bias=True,\n",
-    "        stride=2,\n",
-    "        act=True\n",
+    "        in_channels, # Number of channels in the input\n",
+    "        out_channels, # Number of channels in the output after convolution\n",
+    "        kernel_size=3, # Size of square kernel used for convolution (3 represents a square of 3x3 pixels)\n",
+    "        bias=True, # If true, a bias parameter is automatically included\n",
+    "        stride=2, # Size of stride\n",
+    "        act=True # Include activation. If true, activation defaults to ReLU\n",
     "    ):\n",
     "        super().__init__(\n",
     "            nn.Conv2d(in_channels, out_channels, kernel_size=kernel_size, stride=stride, padding=kernel_size//2, bias=bias),\n",
@@ -81,57 +97,28 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class ResnetStem():\n",
+    "class ResnetStem(nn.Sequential):\n",
+    "    \"\"\"\n",
+    "        First block used in a resnet, containing a series of layers \n",
+    "        for downsampling the input. Input is downsampled by a factor \n",
+    "        of 4, leaving a pixel grid that is 4x smaller than the input.\n",
+    "    \"\"\"\n",
     "    def __init__(\n",
     "        self,\n",
-    "        stem_sizes\n",
+    "        stem_sizes: list # stem block channel sizes — [img_channels, 32, 32, 64] common\n",
     "    ):\n",
-    "        self.conv1 = nn.Sequential(\n",
-    "            [\n",
+    "        super().__init__(\n",
+    "            *[\n",
     "                ConvNormAct(\n",
     "                    in_channels=stem_sizes[i],\n",
     "                    out_channels=stem_sizes[i+1],\n",
     "                    kernel_size=3,\n",
     "                    stride=2 if i==0 else 1\n",
     "                )\n",
-    "            for i in stem_sizes\n",
-    "            ]\n",
-    "        )\n",
-    "            \n",
-    "        super().init(\n",
-    "            ConvNormAct(in_channels, out_channels, kernel_size=kernel_size, stride=stride),\n",
+    "            for i in range(len(stem_sizes) - 1)\n",
+    "            ],\n",
     "            nn.MaxPool2d(kernel_size=3, stride=2, padding=1)\n",
     "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95d78a09-788f-4eac-912a-e821dbbc2439",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "class BottleneckBlock(nn.Module):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        in_channels,\n",
-    "        out_channels,\n",
-    "        reduction=4,\n",
-    "        stride=1\n",
-    "    ):\n",
-    "        \n",
-    "        reduced_features = out_channels // reduction\n",
-    "        \n",
-    "        self.block = nn.Sequential(\n",
-    "            ConvNormAct(in_channels, reduced_features, kernel_size=1, stride=stride), # <----- including stride enables us to stride on this layer\n",
-    "            ConvNormAct(reduced_features, reduced_features, kernel_size=3),\n",
-    "            ConvNormAct(reduced_features, out_channels, kernel_size=1)\n",
-    "        )\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = self.block(x)\n",
-    "        return x"
    ]
   },
   {
@@ -143,14 +130,21 @@
    "source": [
     "#| export\n",
     "class BottleneckBlock(nn.Module):\n",
+    "    \"\"\"\n",
+    "        Main component of a resnet. Contains a series of ConvNormAct \n",
+    "        layers that compute over the input, in a 'wide, narrow, wide' \n",
+    "        pattern with an optional stride parameter. The input is threaded\n",
+    "        through the layer with a skip connection, and added to the output \n",
+    "        as a residual.\n",
+    "    \"\"\"\n",
     "    def __init__(\n",
     "        self,\n",
-    "        in_channels,\n",
-    "        out_channels,\n",
-    "        reduction=4,\n",
-    "        stride=1\n",
+    "        in_channels, # number of channels in the input\n",
+    "        out_channels, # number of channels in output after block\n",
+    "        reduction=4, # factor of reduction in the bottleneck\n",
+    "        stride=1 # kernel stride (only affects the first ConvNormAct layer in the block)\n",
     "    ):\n",
-    "        \n",
+    "        super().__init__()\n",
     "        reduced_features = out_channels // reduction\n",
     "        \n",
     "        self.block = nn.Sequential(\n",
@@ -187,17 +181,23 @@
    "source": [
     "#| export\n",
     "class ResnetStage(nn.Sequential):\n",
+    "    \"\"\"\n",
+    "        High level component enabling flexible construction of resnets \n",
+    "        of different depths and sizes. Each stage contains a series of\n",
+    "        bottleneck blocks — the number depends on the 'depth' parameter \n",
+    "        passed down from the parent class.\n",
+    "    \"\"\"\n",
     "    def __init__(\n",
     "        self,\n",
-    "        in_channels,\n",
-    "        out_channels,\n",
-    "        depth,\n",
-    "        stride=2\n",
+    "        in_channels, # Number of channels in the input\n",
+    "        out_channels, # Number of channels in the output\n",
+    "        depth, # Number of BottleneckBlocks included in the stage\n",
+    "        stride=2 # Stride passed down to the BottleneckBlock (only affects the first ConvNormAct layer in child BottleneckBlock)\n",
     "    ):\n",
     "        super().__init__(\n",
-    "            BottleneckBlock(in_channels, out_channels, stride=2),\n",
+    "            BottleneckBlock(in_channels, out_channels, stride=stride),\n",
     "            *[\n",
-    "                BottleneckBlock(out_channels, out_channels)\n",
+    "                BottleneckBlock(out_channels, out_channels, stride=stride)\n",
     "                for i in range(depth - 1)\n",
     "            ]\n",
     "        )"
@@ -212,14 +212,22 @@
    "source": [
     "#| export\n",
     "class ResnetNN(nn.Module):\n",
+    "    \"\"\"\n",
+    "        Main resnet class that builds the network from a series of \n",
+    "        subclasses. Flexible enough to enable construction of resnets \n",
+    "        across a range of widths and depths. Finishes with an average \n",
+    "        pool layer followed by a fully connected layer, which produces \n",
+    "        the predicted classes in the output.\n",
+    "    \"\"\"\n",
     "    def __init__(\n",
     "        self,\n",
-    "        img_channels,\n",
-    "        stem_sizes,\n",
-    "        widths,\n",
-    "        depths,\n",
-    "        num_classes\n",
+    "        img_channels, # Number of channels in the image\n",
+    "        stem_sizes, # Number of channels to use in ConvNormAct layers in the ResnetStem block — [32,32,64] is a common choice\n",
+    "        widths, # Widths for the output of each layer. Wider layers usually means more capabilities, but more parameters and slower training\n",
+    "        depths, # Number of bottleneck blocks contained in each ResnetStage\n",
+    "        num_classes # Number of possible labels in the training set\n",
     "    ):\n",
+    "        super().__init__()\n",
     "        stem_sizes = [img_channels, *stem_sizes]\n",
     "        self.stem = ResnetStem(stem_sizes)\n",
     "        \n",
@@ -228,9 +236,9 @@
     "                ResnetStage(stem_sizes[-1], widths[0], depths[0], stride=1),\n",
     "                *[\n",
     "                    ResnetStage(widths[i], widths[i+1], depths[i+1])\n",
-    "                    for i in widths\n",
+    "                    for i in range(len(widths) - 1)\n",
     "                ]\n",
-    "            ]   \n",
+    "            ]\n",
     "        )\n",
     "        \n",
     "        self.avgpool = nn.AdaptiveAvgPool2d((1, 1))\n",
@@ -257,60 +265,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77a661d5-c8b7-4dc4-8e1d-f250769530f9",
+   "id": "172dec1c-76ac-47f1-8c9a-9ce922032946",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import miniai"
+    "#| hide\n",
+    "import nbdev; nbdev.nbdev_export()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d16a1c3-4bae-480e-9ce5-b21bc8d8a844",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'miniai' (namespace)>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "miniai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ea5d5ee-7484-474f-b222-768d229bae0f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'miniai.learner'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/j6/574d01vs0jbdkcvby42tj1v80000gn/T/ipykernel_51935/373995518.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mminiai\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearner\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'miniai.learner'"
-     ]
-    }
-   ],
-   "source": [
-    "from miniai.learner import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "249f6535-5353-4025-9225-c01f8bbb0633",
+   "id": "ba14aca1-7785-40b0-89a6-2d2305ddba0d",
    "metadata": {},
    "outputs": [],
    "source": []
