replaced tqdm with fastprogress for progress bar tracking in learner

--- a/nbs/01_datasets.ipynb
+++ b/nbs/01_datasets.ipynb
@@ -47,7 +47,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "196af06cdb604060a94fa9b4ae0dd459",
+       "model_id": "cf07728579bd4ffab1fed60c40724724",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,9 +166,10 @@
     "        cls, \n",
     "        dd, # Dataset dict object (works with hugging face datasets) \n",
     "        batch_size: int, # Batch size for the dataloader\n",
-    "        as_tuple: bool=True # If true, returns a tuple of dataloaders like (train, valid)\n",
+    "        as_tuple: bool=True, # If true, returns a tuple of dataloaders like (train, valid)\n",
+    "        num_workers: int=4 # Number of CPUs used in parallel\n",
     "    ):\n",
-    "        return cls(*[DataLoader(ds, batch_size, num_workers=4, collate_fn=collate_dict(ds) if as_tuple else default_collate) for ds in dd.values()])"
+    "        return cls(*[DataLoader(ds, batch_size, num_workers=num_workers, collate_fn=collate_dict(ds) if as_tuple else default_collate) for ds in dd.values()])"
    ]
   },
   {
