--- a/nbs/03_learner.ipynb
+++ b/nbs/03_learner.ipynb
@@ -48,7 +48,7 @@
     "import torch.nn.functional as F\n",
     "\n",
     "from datasets import load_dataset, load_dataset_builder\n",
-    "from tqdm.auto import tqdm\n",
+    "from tqdm import tqdm\n",
     "\n",
     "import torchvision.transforms.functional as TF\n",
     "from fastcore.test import test_close\n",
@@ -61,7 +61,9 @@
     "import pandas as pd\n",
     "from miniai.conv import *\n",
     "from miniai.datasets import *\n",
-    "from nbdev.showdoc import *"
+    "from nbdev.showdoc import *\n",
+    "\n",
+    "from fastprogress.fastprogress import master_bar, progress_bar"
    ]
   },
   {
@@ -382,10 +384,10 @@
     "        self.plot = plot\n",
     "        if plot: self.losses, self.counter = [], 0\n",
     "        \n",
-    "    def before_fit(self): self.learn.epochs = tqdm(self.learn.epochs, total=self.learn.n_epochs)\n",
+    "    def before_fit(self): self.learn.epochs = master_bar(self.learn.epochs, total=self.learn.n_epochs)\n",
     "    \n",
     "    def before_epoch(self):\n",
-    "        self.learn.dl = tqdm(self.learn.dl, leave=False, total=len(self.learn.dl))\n",
+    "        self.learn.dl = progress_bar(self.learn.dl, leave=False, total=len(self.learn.dl))\n",
     "    def after_batch(self):\n",
     "        if self.plot and self.learn.model.training:\n",
     "            self.losses.append(float(self.learn.loss.detach()))\n",
