initialisation and accelerated sgd notebooks

--- a/nbs/02_conv.ipynb
+++ b/nbs/02_conv.ipynb
@@ -59,10 +59,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "class ConvNormAct(nn.Sequential):\n",
+    "class ConvNormAct(nn.Module):\n",
     "    \"\"\"\n",
-    "        Sequential block containing a convolutional layer, followed by batch \n",
-    "        normalisation and a ReLU activation. It is the basic component of\n",
+    "        Sequential block containing a convolutional layer, followed by a \n",
+    "        normalisation layer and a ReLU activation. It is the basic component of\n",
     "        convolutional neural networks.\n",
     "    \"\"\"\n",
     "    def __init__(\n",
@@ -72,13 +72,20 @@
     "        kernel_size=3, # Size of square kernel used for convolution (3 represents a square of 3x3 pixels)\n",
     "        bias=True, # If true, a bias parameter is automatically included\n",
     "        stride=2, # Size of stride\n",
-    "        act=True # Include activation. If true, activation defaults to ReLU\n",
+    "        norm=nn.BatchNorm2d, # type of normalisation applied, default BatchNorm2d. If \"None\", no normalisation is applied.\n",
+    "        act=nn.ReLU, # Activation function. If \"None\", no activation function is applied.\n",
+    "        zero_norm_weights=False\n",
     "    ):\n",
-    "        super().__init__(\n",
-    "            nn.Conv2d(in_channels, out_channels, kernel_size=kernel_size, stride=stride, padding=kernel_size//2, bias=bias),\n",
-    "            nn.BatchNorm2d(out_channels),\n",
-    "            nn.ReLU() if act else None\n",
-    "        )"
+    "        super().__init__()\n",
+    "        conv = nn.Conv2d(in_channels, out_channels, kernel_size=kernel_size, stride=stride, padding=kernel_size//2, bias=bias)\n",
+    "        if zero_norm_weights: nn.init.constant_(conv.weight, 0.)\n",
+    "        self.block = nn.Sequential(\n",
+    "            conv,\n",
+    "            norm(out_channels) if norm is not None else nn.Identity(),\n",
+    "            act() if act is not None else nn.Identity()\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x): return self.block(x)"
    ]
   },
   {
@@ -276,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba14aca1-7785-40b0-89a6-2d2305ddba0d",
+   "id": "74590f4f-0a66-482a-bb12-269db9648a9c",
    "metadata": {},
    "outputs": [],
    "source": []
