--- a/nbs/04_activations.ipynb
+++ b/nbs/04_activations.ipynb
@@ -65,7 +65,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cba2a165da46468f94be93455e32a094",
+       "model_id": "a31b6116638943b28c50adcdaeafded1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +184,7 @@
     "model = get_model()\n",
     "cbs = [DeviceCB(), MetricsCB(accuracy=MulticlassAccuracy()), ProgressCB(plot=True)]\n",
     "learn = BaseLearner(dls, model, cbs=cbs)\n",
-    "learn.fit(0.5, 1, one_cycle=False)"
+    "learn.fit(0.5, 1)"
    ]
   },
   {
@@ -303,7 +303,7 @@
     "hooks = [Hook(l, append_stats) for l in model]\n",
     "cbs = [DeviceCB(), MetricsCB(accuracy=MulticlassAccuracy()), ProgressCB(plot=True)]\n",
     "learn = BaseLearner(dls, model, cbs=cbs)\n",
-    "learn.fit(0.5, 1, one_cycle=False)"
+    "learn.fit(0.5, 1)"
    ]
   },
   {
@@ -338,6 +338,26 @@
     "        ax[j].plot(h.stats[j])\n",
     "        ax[j].set_title(\"Means\" if j == 0 else \"Std\")\n",
     "        ax[j].legend(range(len(hooks)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96700f1a-3273-48c6-8386-5cd9b4bf6ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class Hooks(list):\n",
+    "    def __init__(self, model, func): super().__init__([Hook(layer, func) for layer in model])\n",
+    "    def __enter__(self, *args): return self\n",
+    "    def __exit__(self, *args): self.remove()\n",
+    "    def __del__(self): self.remove()\n",
+    "    def __delitem__(self, i):\n",
+    "        self[i].remove()\n",
+    "        super().__delitem__(i)\n",
+    "    def remove(self): \n",
+    "        for hook in self: hook.remove()"
    ]
   },
   {
@@ -560,7 +580,7 @@
     "model = get_model()\n",
     "cbs = [DeviceCB(), MetricsCB(accuracy=MulticlassAccuracy()), ProgressCB(plot=True), ActivationStats(append_stats, layer_filter=fc.risinstance(nn.Conv2d))]\n",
     "learn = BaseLearner(dls, model, cbs=cbs)\n",
-    "learn.fit(0.4, 1, one_cycle=True)"
+    "learn.fit(0.4, 1)"
    ]
   },
   {
