--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# core\n",
+    "# Core\n",
     "\n",
-    "> Fill in a module description here"
+    "Miscellaneous useful functions for deep learning."
    ]
   },
   {
@@ -24,8 +24,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "import gc\n",
+    "import torch\n",
+    "import sys\n",
+    "import traceback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| hide\n",
     "from nbdev.showdoc import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def clean_ipython_hist():\n",
+    "    # Code in this function mainly copied from IPython source\n",
+    "    if not 'get_ipython' in globals(): return\n",
+    "    ip = get_ipython()\n",
+    "    user_ns = ip.user_ns\n",
+    "    ip.displayhook.flush()\n",
+    "    pc = ip.displayhook.prompt_count + 1\n",
+    "    for n in range(1, pc): user_ns.pop('_i'+repr(n),None)\n",
+    "    user_ns.update(dict(_i='',_ii='',_iii=''))\n",
+    "    hm = ip.history_manager\n",
+    "    hm.input_hist_parsed[:] = [''] * pc\n",
+    "    hm.input_hist_raw[:] = [''] * pc\n",
+    "    hm._i = hm._ii = hm._iii = hm._i00 =  ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def clean_tb():\n",
+    "    if hasattr(sys, 'last_traceback'):\n",
+    "        traceback.clear_frames(sys.last_traceback)\n",
+    "        delattr(sys, 'last_traceback')\n",
+    "    if hasattr(sys, 'last_type'): delattr(sys, 'last_type')\n",
+    "    if hasattr(sys, 'last_value'): delattr(sys, 'last_value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def clean_gpu():\n",
+    "    clean_tb()\n",
+    "    clean_ipython_hist()\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()"
    ]
   },
   {
