acceleration and initialisation notebooks

--- a/nbs/06_accel_sgd.ipynb
+++ b/nbs/06_accel_sgd.ipynb
@@ -2098,7 +2098,7 @@
      "output_type": "stream",
      "text": [
       "   Train loss  Valid loss  Accuracy\n",
-      "0      0.5376      0.3786    0.8639\n"
+      "0      0.5618      0.3982    0.8536\n"
      ]
     },
     {
@@ -2126,7 +2126,7 @@
      "output_type": "stream",
      "text": [
       "   Train loss  Valid loss  Accuracy\n",
-      "1      0.3326       0.334    0.8796\n"
+      "1      0.3423       0.351    0.8701\n"
      ]
     },
     {
@@ -2154,7 +2154,7 @@
      "output_type": "stream",
      "text": [
       "   Train loss  Valid loss  Accuracy\n",
-      "2      0.2889      0.3153    0.8883\n"
+      "2      0.2954      0.3262    0.8782\n"
      ]
     },
     {
@@ -2182,7 +2182,7 @@
      "output_type": "stream",
      "text": [
       "   Train loss  Valid loss  Accuracy\n",
-      "3      0.2671      0.3063    0.8898\n"
+      "3       0.264      0.3134    0.8829\n"
      ]
     },
     {
@@ -2210,16 +2210,16 @@
      "output_type": "stream",
      "text": [
       "   Train loss  Valid loss  Accuracy\n",
-      "4      0.2513      0.2997    0.8921\n"
+      "4      0.2452      0.3076    0.8862\n"
      ]
     }
    ],
    "source": [
-    "# steps = 5 * len(dls.train)\n",
-    "# scheduler = LRScheduler(partial(CosineAnnealingLR, total_steps=steps))\n",
-    "# model = get_model()\n",
-    "# learn = BaseLearner(dls, model, cbs=cbs, scheduler=scheduler, opt_func=partial(optim.AdamW, weight_decay=0.1))\n",
-    "# learn.fit(0.01, 5)"
+    "steps = 5 * len(dls.train)\n",
+    "scheduler = LRScheduler(partial(CosineAnnealingLR, total_steps=steps))\n",
+    "model = get_model()\n",
+    "learn = BaseLearner(dls, model, cbs=cbs, scheduler=scheduler, opt_func=partial(optim.AdamW, weight_decay=0.1))\n",
+    "learn.fit(0.01, 5)"
    ]
   },
   {
