--- a/nbs/05_initialisation.ipynb
+++ b/nbs/05_initialisation.ipynb
@@ -838,8 +838,10 @@
    "source": [
     "#| export\n",
     "class BatchTransform(Callback):\n",
-    "    def __init__(self, f): self.func = f\n",
-    "    def before_batch(self): self.learn.batch = self.func(self.learn.batch)"
+    "    def __init__(self, func, on_train=True, on_val=False): fc.store_attr()\n",
+    "    def before_batch(self): \n",
+    "        if (self.on_train and self.learn.model.training) or (self.on_val and not self.learn.model.training):\n",
+    "            self.learn.batch = self.func(self.learn.batch)"
    ]
   },
   {
